# Parametric_Arsenal

./: .editorconfig  .gitignore  .manual-cleanup-required.txt  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .secrets.baseline  .shellcheckrc  .yamllint.yml  AGENTS.md  ANALYSIS.md  ANALYSIS_COMPUTE_CORRECTIONS.md  ANALYSIS_COMPUTE_SANITY_CHECK.md  ANALYSIS_INDEX.md  BRANCH_COMPARISON_MATRIX.md  BRANCH_DIAGRAM.txt  CHANGELOG.MD  CHANGELOG.md  CLAUDE.md  CODEBASE_DENSITY_REVIEW.md  COMMIT_INSTRUCTIONS.md  COMPLIANCE_VERIFICATION.md  COMPUTE_OPTIMIZATION_SUMMARY.md  COMPUTE_REFACTORING_PLAN.md  CONTRIBUTING.md  Directory.Build.props  FINAL_ITERATION_RECOMMENDATIONS.md  FINAL_SANITY_CHECK_RESULTS.md  FROZENDICT_AUDIT.md  PR212_REVIEW_FIXES.md  PR_COMPARISON_ANALYSIS.md  PR_FINAL_COMPARISON.md  PR_REVIEW_SUMMARY.md  Parametric_Arsenal.sln  QUICK_REFERENCE.md  README.md  README_ANALYSIS.md  REFACTOR_SUMMARY.md  RHINO_REFACTOR_ANALYSIS.md  (+14 more)
.claude/: settings.json
.claude/commands/: implement.md  refactor.md  review-csharp.md  test.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-claude.yml  maintenance.yml
.github/agents/: cleanup-specialist.agent.md  csharp-advanced.agent.md  documentation-specialist.agent.md  grasshopper-implementation.agent.md  integration-specialist.agent.md  library-planner.agent.md  performance-analyst.agent.md  plugin-architect.agent.md  refactoring-architect.agent.md  rhino-implementation.agent.md  testing-specialist.agent.md
.github/prompts/: README.md  add-functionality.prompt.md  code-cleanup.prompt.md  code-optimization.prompt.md  code-organization.prompt.md  integration-testing.prompt.md  rhino-testing.prompt.md  sdk_and_logic.prompt.md  testing.prompt.md
.github/workflows/: auto-merge.yml  ci.yml  claude-autofix.yml  claude-code-review.yml  claude-issues.yml  claude-maintenance.yml  claude-validation.yml  claude.yml  context-gen.yml  pre-commit-autoupdate.yml  precommit-autoupdate.yml  release.yml  rhino-tests.yml  standards-sync.yml  status-dashboard.yml  update-pre-commit.yml
.kiro/steering/: product.md  standards.md  structure.md  tech.md
.tools/scripts/: add_types.sh  pypi_name_map.py
.tools/scripts/quality/: update_header.py
docs/: AGENTIC-INFRASTRUCTURE.md  DIAGNOSTICS.md  PRE-COMMIT-EXAMPLES.md  PRE-COMMIT-FAQ.md  PRE-COMMIT-QUICKSTART.md  PRE-COMMIT.md  rhinocommon-integration-opportunities.md  rhinocommon-knowledge-base.md  rhinocommon-sdk-analysis.md  unused-interfaces-analysis.md
docs/agent-context/: architecture.json  domain-map.json  error-catalog.json  exemplar-metrics.json  validation-modes.json
docs/agentic-design/: ANALYSIS.md  TASK_FINAL.md
docs/validation/: COMPLETION_SUMMARY.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_SUMMARY.md  README.md  VALIDATION_SYSTEM_ANALYSIS.md
grasshopper/definitions/: Layout_Grid_Generato.gh
grasshopper/plugins/HopperHelper/: HopperHelper.csproj  HopperHelperInfo.cs
libs-new/core/: Core.csproj
libs-new/core/Guard/: Guard.cs
libs-new/core/Result/: Failure.cs  Result.cs
libs-new/grasshopper/: Grasshopper.csproj
libs-new/grasshopper/Components/: ComponentBase.cs  TaskComponent.cs
libs-new/grasshopper/DataStructures/: TreeOperations.cs
libs-new/grasshopper/Parameters/: DataAccessReader.cs  ParameterCatalog.cs  ParameterDefinition.cs
libs-new/grasshopper/Preview/: NumberedDotRenderer.cs  PreviewBounds.cs
libs-new/grasshopper/Runtime/: DocScopeProvider.cs  SolvePipeline.cs  SolveWorkResult.cs
libs-new/rhino/: Rhino.csproj
libs-new/rhino/Context/: GeoContext.cs
libs-new/rhino/Display/: Bounds.cs
libs-new/rhino/Document/: DocScope.cs  Tolerance.cs  Units.cs
libs-new/rhino/Spatial/: BoundsCalculator.cs  PointIndex.cs
libs/core/: Core.csproj  Guard.cs  Result.cs  packages.lock.json
libs/core/Result/: Failure.cs  Result.cs
libs/core/context/: GeometryContext.cs  IGeometryContext.cs
libs/core/diagnostics/: DiagnosticCapture.cs  DiagnosticContext.cs  DiagnosticErrors.cs
libs/core/errors/: CoreErrors.cs  Domain.cs  E.cs  ErrorCatalog.cs  ErrorDomain.cs  ErrorFactory.cs  ErrorRegistry.cs  SystemError.cs
libs/core/operations/: ErrorStrategy.cs  OperationConfig.cs  README.md  (+3 more)
libs/grasshopper/: Grasshopper.csproj  packages.lock.json
libs/mzn/: __init__.py
libs/mzn_cli/: main.py
libs/rhino/: FROZENDICT_AUDIT.md  IMPLEMENTATION_BLUEPRINT.md  IMPLEMENTATION_PLAN_A_FOUNDATION.md  IMPLEMENTATION_PLAN_B_INTEGRATION.md  IMPLEMENTATION_PLAN_C_FEATURES.md  IMPLEMENTATION_PLAN_SUMMARY.md  LIBRARY_GUIDELINES.md  README.md  Rhino.csproj  file_architecture.md  new_libs_functionality.md  packages.lock.json  rhino_math_class.md  rhino_math_reference.md
scripts/: add_types.sh  refresh_pypi_name_map.py  setup-precommit.ps1  setup-precommit.sh  update_deps.py
test/core/: Arsenal.Core.Tests.csproj  packages.lock.json
test/rhino/: .runsettings  Arsenal.Rhino.Tests.csproj  Rhino.Testing.Configs.xml  RhinoGeometryTests.cs  packages.lock.json
test/shared/: Arsenal.Tests.Shared.csproj  GenEx.cs  LawVerification.cs  README.md  Test.cs  TestAssert.cs  TestBench.cs  TestData.cs  TestGen.cs  TestLaw.cs  TestUtilities.cs  packages.lock.json
tests/: conftest.py
tools/ContextGen/: ContextGen.csproj  Program.cs  packages.lock.json
tools/schemas/: review-output.schema.json
tools/standards/: STANDARDS.yaml  StandardsGen.csx  agent-schema.json
typings/aenum/: __init__.pyi
typings/aiocache/: __init__.pyi
typings/brotli/: __init__.pyi
typings/cachebox/: __init__.pyi
typings/cytoolz/: __init__.pyi
typings/diskcache/: __init__.pyi
typings/icecream/: __init__.pyi
typings/jsonschema/: __init__.pyi
typings/line_profiler/: __init__.pyi
typings/lz4/: __init__.pyi  frame.pyi
typings/memory_profiler/: __init__.pyi
typings/msgpack/: __init__.pyi
typings/pyinstrument/: __init__.pyi
typings/radon/: __init__.pyi  complexity.pyi  metrics.pyi
typings/redis/: __init__.pyi
typings/vulture/: __init__.pyi
typings/wrapt/: __init__.pyi
(+451 files in other folders)
